2005-09-02 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdint.h: C99ify, contributed by Carlos Lamas, part of
	patch #4087: C99 conformal headers stdint.h and inttypes.h

2005-09-01 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/main_page.dox: mention that recent devices' support
	requires respective support of the toolchain at compile-time.

2005-09-01 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Markus F.X.J. Oberhumer:
	* include/stdint.h: use GCC attributes for exact integral
	types. Avoid -Wlong-long warnings by adding __extension__. Remove
	obsolete comments.  Closes patch #3782 overview: modernize
	<stdint.h>

2005-09-01 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdlib/ctype.S: Change all branches into RJMPs
	to guarantee their reachability, closes patch #3912.
	Contributed by Stefano Rodrigo.

2005-09-01 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Implement <assert.h>, closes patch #3780.
	* include/assert.h: new file.
	* libc/stdlib/assert.c: new file.
	* include/Makefile.am: include new file(s).
	* libc/stdlib/Files.am: (Ditto.)

2005-09-01 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/iom329.h: add bits for EECR.
	* include/avr/iom3290.h: (Ditto.)
	* include/avr/iom649.h: (Ditto.)
	* include/avr/iom6490.h: (Ditto.)

2005-08-31 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/sections.dox: catch up with .init4 reality (fix for
	bug #14262)
	* include/avr/iomxx4.h: define the EECR bits.
	* include/avr/eeprom.h: use either EEWE or EEPE in
	eeprom_is_ready(); fix for bug #14241

2005-08-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/wdt.h: Document the watchdog remaining active after
	a watchdog reset, and how to turn it off.

2005-08-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Add support for ATmega164/324/644, contributed by Anatoly Sokolov.
	* configure.ac: add tests for the ATmega164/324/644 support.
	* devtools/gen-avr-lib-tree.sh: add support for ATmega164/324/644.
	* include/avr/io.h: (Ditto.)